<resources>
    <string name="app_name">Meet-O</string>

    <string name="emailhint">Enter Email</string>

    <string name="passwordhint">Enter Password</string>

    <string name="loginbutton">Log In and Save Trip</string>

    <string name="registerbutton">Register</string>

    <string name="loginmessage">Looks like you are not logged in yet. Register and/or sign in to save your trip.</string>

    <string name="onewayheader">I need a ride from:</string>

    <string name="to">to</string>

    <string name="travelquestion">When are you traveling?</string>

    <string name="selectdate">Select Date</string>

    <string name="selecttime">Select Time</string>

    <string name="gettodtw">What time do you want to get to DTW?</string>

    <string name="leavefromdtw">What time do you want to leave from DTW?</string>

    <string name="gettodtwret">What time do you want to get to DTW?</string>

    <string name="leavefromdtwret">What time do you want to leave from DTW?</string>

    <string name="luggagequestion">What luggage are you traveling with?</string>

    <string name="roundtripyesbutton">Yes, continue to add return trip details</string>

    <string name="roundtripnobutton">No, save trip one-way</string>

    <string name="matchstatus">MATCH PENDING</string>

    <string name="goback">Go Back</string>

    <string name="edittripdetails">Edit Trip Details</string>

    <string name="canceltrip">Cancel Trip</string>


</resources>
